# GameTrainer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  PROJECT_OVERVIEW.md  README.md  architecture.md  config.json  context.md  design.md  main.py  setup.py  tasks.md  test_input.py  train.py
.agent/: README.md
.claude/: settings.local.json
.cursor/rules/: read-agents-first.mdc
.cursor/skills/grill-me/: skill.md
DOCUMENTS/: game_trainer_design.md  knowledge_system_design.md  screen_capture_design.md  uml_diagrams.md
GameTrainerGUI/: Form1.Designer.cs  Form1.cs  Program.cs
design docs/: design.md
docs/: AGENTS.md  CHANGELOG.md  M1_review.md  PRD.md  README.md  alignment_report.md  design.md  rich_error.md
docs/m0/: GameTrainer_UML_2_M0.md
docs/m1/: GameTrainer_UML_3_M1.md
docs/m2/: M2_ToDo.md
docs/project proposal and research/: GameTrainer_UML_1_Complete.md
include/: hook.h  input.h  main.h
logs/PPO_1/: events.out.tfevents.1767711993.Phillip.55012.0
logs/PPO_10/: events.out.tfevents.1767715941.Phillip.3756.0
logs/PPO_11/: events.out.tfevents.1767717723.Phillip.52168.0
logs/PPO_2/: events.out.tfevents.1767712258.Phillip.38888.0
logs/PPO_3/: events.out.tfevents.1767713101.Phillip.54240.0
logs/PPO_4/: events.out.tfevents.1767713674.Phillip.32448.0
logs/PPO_5/: events.out.tfevents.1767713688.Phillip.84712.0
logs/PPO_6/: events.out.tfevents.1767713819.Phillip.48672.0
logs/PPO_7/: events.out.tfevents.1767714298.Phillip.41872.0
logs/PPO_8/: events.out.tfevents.1767715134.Phillip.58312.0
logs/PPO_9/: events.out.tfevents.1767715444.Phillip.12408.0
profiles/stardew_valley/: regions.yaml
scripts/: capture_templates.py  play.py  run_cartpole.py  train.py  train_cartpole.py  transfer_learning.py
src/: hook.c  input.c  main.c
src/c/: hook.c  hook.h  input.c  input.h  memory_manager.c  memory_manager.h  process_handler.c
src/c/interface/: interface.c  interface.h
src/cpp/: clib.cpp  input.cpp  input.h  input_simulator.cpp  input_simulator.h  memory_manager.cpp  memory_manager.h  process_handler.h  py_init.cpp
src/gametrainer/: __init__.py  dependencies.py  env.py  env_multiregion.py  env_vit.py  events.py  gridworld.py  hardware.py  input.py  interface.py  logger.py  screen.py  tui.py  vit_extractor.py
src/python/core/: config_loader.py  dependencies.py  input_controller.py  logger.py  memory_controller.py  pixel_detector.py  screen_capture.py  state_manager.py  trainer.py
src/python/core/io/: process_client.py
src/python/core/rl/: env.py
src/python/core/vision/: __init__.py  health_detector.py
src/python/gui/: event_handler.py  main_window.py
tests/: __init__.py  test_input.py  test_logger.py
